--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -3282,6 +3282,10 @@ textarea,
     min-height: 88px;
 }
 
+.mh-98 {
+    min-height: 98px;
+}
+
 .mh-92 {
     min-height: 92px;
 }
@@ -3963,6 +3967,10 @@ textarea::placeholder {
 
 .dc__zi-5 {
     z-index: 5;
+}
+
+.dc__zi-10 {
+    z-index: 10;
 }
 
 .dc__zi-20 {
