--- a/src/css/icons.scss
+++ b/src/css/icons.scss
@@ -98,6 +98,10 @@
     height: 8px;
 }
 
+.icon-dim-8-imp {
+    width: 8px !important;
+    height: 8px !important;
+}
 .icon-dim-10 {
     width: 10px;
     height: 10px;
