--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -3339,7 +3339,7 @@ textarea,
 }
 
 .mxh-250 {
-    max-height: 210px;
+    max-height: 250px;
 }
 
 .mxh-300 {
@@ -3348,6 +3348,10 @@ textarea,
 
 .mxh-300-imp {
     max-height: 300px !important;
+}
+
+.mxh-350 {
+    max-height: 350px;
 }
 
 .mxh-504 {
