--- a/src/css/workflow.scss
+++ b/src/css/workflow.scss
@@ -22,13 +22,14 @@
     position: absolute;
     border-radius: 50px;
     border: 1px solid var(--N200);
-    font-size: 10px;
+    font-size: 11px;
     color: var(--N700);
-    top: -10px;
+    top: -12px;
     right: 10px;
-    padding: 2px 8px;
+    padding: 4px 8px;
     font-weight: 600;
     background-color: var(--N100);
+    line-height: 12px;
 
     &--include-add-cd {
         right: 32px !important;
