fix: import object bar class name

--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -2240,6 +2240,10 @@ button.anchor {
     max-width: 200px !important;
 }
 
+.dc__mxw-240 {
+    max-width: 240px;
+}
+
 .dc__mxw-250 {
     max-width: 250px;
 }
@@ -2871,6 +2875,10 @@ textarea,
 
 .w-120 {
     width: 120px;
+}
+
+.w-126 {
+    width: 126px;
 }
 
 .w-150 {
