fix: style error page

--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -19,8 +19,17 @@
 }
 
 body {
-    font-family: 'Open Sans', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen-Sans, Ubuntu, Cantarell,
-        'Helvetica Neue', sans-serif;
+    font-family:
+        'Open Sans',
+        -apple-system,
+        BlinkMacSystemFont,
+        'Segoe UI',
+        Roboto,
+        Oxygen-Sans,
+        Ubuntu,
+        Cantarell,
+        'Helvetica Neue',
+        sans-serif;
     background: var(--window-bg);
 
     a {
@@ -647,11 +656,16 @@ button.anchor {
     }
 
     50% {
-        text-shadow: 6px 0, 12px 0;
+        text-shadow:
+            6px 0,
+            12px 0;
     }
 
     75% {
-        text-shadow: 6px 0, 12px 0, 18px 0;
+        text-shadow:
+            6px 0,
+            12px 0,
+            18px 0;
     }
 }
 
@@ -1072,7 +1086,9 @@ button.anchor {
     height: 80px;
     border-radius: 50px;
     opacity: 0.8;
-    box-shadow: 0 0 4px 0 rgba(0, 10, 20, 0.5), 0 0 4px 0 rgba(0, 10, 20, 0.5);
+    box-shadow:
+        0 0 4px 0 rgba(0, 10, 20, 0.5),
+        0 0 4px 0 rgba(0, 10, 20, 0.5);
     border: unset;
     overflow: hidden;
 
@@ -2639,7 +2655,8 @@ textarea,
 }
 
 .icon-stroke-b5 {
-    path, rect {
+    path,
+    rect {
         stroke: var(--B500);
     }
 }
@@ -3360,7 +3377,7 @@ textarea,
 }
 
 .min-h-100 {
-    min-height: 100%
+    min-height: 100%;
 }
 
 // Height in percentage
@@ -3382,6 +3399,10 @@ textarea,
 
 .dc__height-reduce-172 {
     height: calc(100vh - 172px);
+}
+
+.dc__height-reduce-48 {
+    height: calc(100% - 48px);
 }
 
 // Line height
@@ -3454,7 +3475,7 @@ textarea,
     padding-left: 28px !important;
 }
 
-.pt-5-imp{
+.pt-5-imp {
     padding-top: 5px !important;
 }
 
@@ -3500,7 +3521,7 @@ textarea,
     padding-top: 4px !important;
 }
 
-.pb-5-imp{
+.pb-5-imp {
     padding-bottom: 5px !important;
 }
 
@@ -3533,7 +3554,7 @@ textarea,
     margin-bottom: -1px;
 }
 
-.mb-neg-2{
+.mb-neg-2 {
     margin-bottom: -2px;
 }
 
@@ -3601,11 +3622,11 @@ textarea,
 }
 
 .ml-36-imp {
-    margin-left: 36px !important 
+    margin-left: 36px !important;
 }
 
 .ml-54 {
-    margin-left: 54px
+    margin-left: 54px;
 }
 
 .ml-60 {
@@ -4160,7 +4181,7 @@ textarea::placeholder {
     height: 100% !important;
 }
 
-.fs-11-imp{
+.fs-11-imp {
     font-size: 11px !important;
 }
 
@@ -4171,33 +4192,33 @@ textarea::placeholder {
 // Start: accouncement banner
 .announcement-banner-container {
     &.page-header-banner {
-            width: fit-content;
-            position: absolute;
-            margin: auto;
-            left: 0;
-            right: 0;
-            top: 0;
-            text-align: center;
-        }
-    
-        &.cd-trigger-announcement {
-            .info-bar-container {
-                .announcement-bar {
-                    border-radius: 0;
-                    border: none;
-                    border-bottom: 1px solid var(--Y700);
-                }
+        width: fit-content;
+        position: absolute;
+        margin: auto;
+        left: 0;
+        right: 0;
+        top: 0;
+        text-align: center;
+    }
+
+    &.cd-trigger-announcement {
+        .info-bar-container {
+            .announcement-bar {
+                border-radius: 0;
+                border: none;
+                border-bottom: 1px solid var(--Y700);
             }
         }
     }
-    
-    .announcement-bar {
-        background-color: var(--Y500);
-        border: 1px solid var(--Y700);
-        border-top: none;
-        padding: 8px 12px !important;
-        border-top-left-radius: 0;
-        border-top-right-radius: 0;
+}
+
+.announcement-bar {
+    background-color: var(--Y500);
+    border: 1px solid var(--Y700);
+    border-top: none;
+    padding: 8px 12px !important;
+    border-top-left-radius: 0;
+    border-top-right-radius: 0;
 }
 
 // End: accouncement banner
@@ -4205,7 +4226,7 @@ textarea::placeholder {
 .bulk-selection-widget {
     border: 1px solid var(--B500);
     background: rgba(240, 247, 255, 0.72);
-    box-shadow: 0px 4px 8px 0px rgba(0, 0, 0, 0.20);
+    box-shadow: 0px 4px 8px 0px rgba(0, 0, 0, 0.2);
     backdrop-filter: blur(4px);
 }
 
