code feedback css

--- a/src/components/ResourceBrowser/ResourceBrowser.scss
+++ b/src/components/ResourceBrowser/ResourceBrowser.scss
@@ -161,6 +161,10 @@
                         .sticky-column {
                             background-color: var(--N50);
                         }
+
+                        .restart-icon path {
+                            stroke: var(--B500);
+                        }
                     }
                 }
             }
