--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -2189,6 +2189,10 @@ button.anchor {
     border-top: none !important;
 }
 
+.dc__no-border-right-imp {
+    border-top: none !important;
+}
+
 .dc__box-shadow {
     box-shadow: inset 0 -1px 0 0 #d6dbdf;
 }
@@ -4277,4 +4281,14 @@ textarea::placeholder {
     &:last-child {
         margin-bottom: 90px;
     }
+}
+
+.dc__unset-button-styles {
+    background: none;
+    color: inherit;
+    border: none;
+    padding: 0;
+    font: inherit;
+    cursor: pointer;
+    outline: inherit;
 }
