--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -3819,12 +3819,21 @@ textarea::placeholder {
 }
 
 // opacity
+
+.dc__opacity-0_2 {
+    opacity: 0.2;
+}
+
 .dc__opacity-0_4 {
     opacity: 0.4;
 }
 
 .dc__opacity-0_5 {
     opacity: 0.5;
+}
+
+.dc__opacity-0_8 {
+    opacity: 0.8;
 }
 
 .dc__opacity-1 {
