css fixes for divider

--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -2141,6 +2141,14 @@ button.anchor {
     border-left: solid 1px var(--N200);
 }
 
+.dc__border-left-n0 {
+    border-left: solid 1px var(--N000);
+}
+
+.dc__border-left-n9 {
+    border-left: solid 1px var(--N900);
+}
+
 .dc__border-left-b4 {
     border-left: solid 1px var(--B400);
 }
