feat: add util for last child no border

--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -4303,3 +4303,11 @@ textarea::placeholder {
         margin-bottom: 90px;
     }
 }
+
+.last-child {
+    &__no-border {
+        &:last-child {
+            border: none;
+        }
+    }
+}
