feat: add o100, o200, o700 and update r600, 700 colors in color palette

--- a/src/css/colorPalette.scss
+++ b/src/css/colorPalette.scss
@@ -37,14 +37,17 @@
     --Y300: #ffd597;
     --Y200: #ffe5be;
     --Y100: #fff5e5;
-    --R700: #862020;
-    --R600: #bd2f2f;
+    --R700: #b21212;
+    --R600: #c73232;
     --R500: #f33e3e;
     --R400: #f66868;
     --R300: #f99292;
     --R200: #fcbcbc;
     --R100: #fde7e7;
+    --O700: #B23412;
     --O500: #ff7e5b;
+    --O200: #FFBEAD;
+    --O100: #FFE5DE;
     --yellow: #ff8300;
     --red: rgba(240, 96, 96, 1);
     --green: rgba(23, 170, 86, 1);
