--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -4214,6 +4214,10 @@ textarea::placeholder {
     color: var(--N500);
 }
 
+.br-18{
+    border-radius: 18px;
+}
+
 .br-48 {
     border-radius: 48px;
 }
@@ -4290,4 +4294,9 @@ textarea::placeholder {
     &:last-child {
         margin-bottom: 90px;
     }
+}
+
+.dc__sidebar-layout-200 {
+    display: grid;
+    grid-template-columns: 200px auto;
 }
