feat: add opacity: 0.2 in base

--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -3852,6 +3852,10 @@ textarea::placeholder {
 }
 
 // opacity
+.dc__opacity-0_2 {
+    opacity: 0.2;
+}
+
 .dc__opacity-0_4 {
     opacity: 0.4;
 }
