feat: add util for transition on transform

--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -4378,3 +4378,9 @@ textarea::placeholder {
         }
     }
 }
+
+.dc__transition {
+    &--transform {
+        transition: transform 0.3s;
+    }
+}
