--- a/src/css/forms.scss
+++ b/src/css/forms.scss
@@ -331,6 +331,7 @@ p.sentence-case:first-letter {
 .form__checkbox:disabled ~ .form__checkbox-container {
     color: var(--N500);
     cursor: not-allowed;
+    opacity: 0.5;
 }
 
 .radio__title {
