--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -2244,6 +2244,18 @@ button.anchor {
 
 .dc__box-shadow {
     box-shadow: inset 0 -1px 0 0 #d6dbdf;
+
+    &--menu {
+        box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.20);
+    }
+
+    &--overlay {
+        box-shadow: 0px 4px 8px 0px rgba(0, 0, 0, 0.20);
+    }
+
+    &--modal {
+        box-shadow: 0px 6px 12px 0px rgba(0, 0, 0, 0.20);
+    }
 }
 
 .dc__box-shadow-top {
