feat: add bitbucket-cloud-server-toggle

--- a/src/components/gitOps/gitops.scss
+++ b/src/components/gitOps/gitops.scss
@@ -36,3 +36,9 @@
 
 	}
 }
+
+.bitbucket-radio-group {
+	.form__radio-group .form__radio-item .form__radio-item-content {
+		padding: 4px 16px 4px 0;
+	}
+}
