--- a/src/css/icons.scss
+++ b/src/css/icons.scss
@@ -117,6 +117,11 @@
     height: 12px;
 }
 
+.icon-dim-13 {
+    width: 13px;
+    height: 13px;
+}
+
 .icon-dim-14 {
     width: 14px;
     height: 14px;
