--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -3603,6 +3603,14 @@ textarea,
     padding: 0px 8px !important;
 }
 
+.pb-140 {
+    padding-bottom: 140px;
+}
+
+.pb-160 {
+    padding-bottom: 160px;
+}
+
 // Margin in pixels
 .dc__m-auto {
     margin: auto;
