--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -298,6 +298,11 @@ a:focus {
     background: transparent;
     border: none;
     padding: 2px;
+
+    &--imp {
+        background: transparent !important;
+        border: none !important;
+    }
 }
 
 .dc__position-fixed {
@@ -347,6 +352,10 @@ a:focus {
 
 .dc__top-47 {
     top: 47px;
+}
+
+.dc__top-49 {
+    top: 49px;
 }
 
 .dc__top-88 {
@@ -4438,6 +4447,14 @@ textarea::placeholder {
     &__border-bottom-n1 {
         &:last-child {
             border-bottom: 1px solid var(--N100);
+        }
+    }
+}
+
+.dc__even-child {
+    &--bcn-50 {
+        > :nth-child(even) {
+            background-color: var(--N50);
         }
     }
 }
