--- a/src/css/formulae.scss
+++ b/src/css/formulae.scss
@@ -356,6 +356,7 @@ $color-suffix: 00;
     &.tertiary,
     &.success,
     &.warning,
+    &.text,
     & {
         &:disabled,
         :disabled:hover,
