--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -165,7 +165,7 @@ a:focus {
 
 .tab-list__tab {
     user-select: none;
-    font-size: 14px;
+    font-size: 13px;
     font-weight: normal;
     line-height: 1.43;
     letter-spacing: normal;
@@ -351,6 +351,10 @@ a:focus {
 
 .dc__top-47 {
     top: 47px;
+}
+
+.dc__top-77 {
+    top: 77px;
 }
 
 .dc__top-88 {
