chore: use dayjs, remove unneeded code, downshift state
fix: open dynamic tab & k8sResource tab title & url on first load

--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -4216,7 +4216,7 @@ textarea::placeholder {
     }
 }
 
-.unset-button-styles {
+.dc__unset-button-styles {
     background: none;
     color: inherit;
     border: none;
