feat: add util classes for row and column gap

--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -3861,8 +3861,16 @@ textarea,
     }
 }
 
+.dc__row-gap-8 {
+    row-gap: 8px;
+}
+
 .dc__column-gap-8 {
     column-gap: 8px;
+}
+
+.dc__column-gap-12 {
+    column-gap: 12px;
 }
 
 .dc__column-gap-16 {
