--- a/src/css/colorPalette.scss
+++ b/src/css/colorPalette.scss
@@ -30,6 +30,7 @@
     --G300: #83d5b2;
     --G200: #b6e9d3;
     --G100: #e9fbf4;
+    --G50: #f2fffa;
     --Y700: #8c6324;
     --Y600: #c58d36;
     --Y500: #ffb549;
@@ -44,10 +45,12 @@
     --R300: #f99292;
     --R200: #fcbcbc;
     --R100: #fde7e7;
+    --R50: #fdf0f0;
     --O700: #B23412;
     --O500: #ff7e5b;
     --O200: #FFBEAD;
     --O100: #FFE5DE;
+    --O50: #fcf3f0;
     --yellow: #ff8300;
     --red: rgba(240, 96, 96, 1);
     --green: rgba(23, 170, 86, 1);
