--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -2395,6 +2395,10 @@ button.anchor {
     max-width: 1068px;
 }
 
+.dc__mxw-1200 {
+    max-width: 1200px;
+}
+
 .dc__mxw-180 {
     max-width: 180px;
 }
