--- a/src/css/icons.scss
+++ b/src/css/icons.scss
@@ -142,6 +142,11 @@
     height: 20px;
 }
 
+.icon-dim-20-imp {
+    width: 20px !important;
+    height: 20px !important;
+}
+
 .icon-dim-22 {
     width: 22px;
     height: 22px;
