feat: add util for mw-32

--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -2897,6 +2897,10 @@ textarea,
     min-width: 24px !important;
 }
 
+.mw-32 {
+    min-width: 32px !important;
+}
+
 .mw-36 {
     min-width: 36px !important;
 }
@@ -4560,4 +4564,3 @@ textarea::placeholder {
 .dc__outline-n1 {
     outline: 1px solid var(--N100);
 }
-
