css for max width 100

--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -2323,6 +2323,10 @@ button.anchor {
     max-width: 90px;
 }
 
+.dc__mxw-100 {
+    max-width: 100px;
+}
+
 .dc__mxw-120 {
     max-width: 120px;
 }
