--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -3380,6 +3380,10 @@ textarea,
     height: 80px !important;
 }
 
+.h-90 {
+    height: 90px !important;
+}
+
 .h-96 {
     height: 96px !important;
 }
