--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -4587,3 +4587,15 @@ textarea::placeholder {
 .dc__outline-n1 {
     outline: 1px solid var(--N100);
 }
+
+.dc__info-card {
+    box-shadow: 0px 1px 2px 0px rgba(1, 87, 173, 0.10);
+    border: 1px solid rgba(0, 102, 204, 0.12);
+
+    &:not(&--no-hover) {
+        &:hover {
+            text-decoration: none;
+            box-shadow: 0 8px 12px 0 rgba(30, 35, 96, 0.10), 0 1px 4px 0 rgba(0, 0, 0, 0.1);
+        }
+    }
+}
