--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -2319,6 +2319,10 @@ button.anchor {
     max-width: 90px;
 }
 
+.dc__mxw-100 {
+    max-width: 100px;
+}
+
 .dc__mxw-120 {
     max-width: 120px;
 }
