--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -2338,6 +2338,10 @@ button.anchor {
     max-width: none !important;
 }
 
+.dc__mxw-66 {
+    max-width: 66px;
+}
+
 .dc__mxw-90 {
     max-width: 90px;
 }
