feat: add util for modal gradient

--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -4590,3 +4590,7 @@ textarea::placeholder {
         }
     }
 }
+
+.dc__modal-gradient {
+    background: linear-gradient(14deg, var(--N50) 48.93%, #D4E6F7 80.3%);
+}
