feat: add tippy to save button on empty fields error

--- a/src/components/deploymentConfig/deploymentConfig.scss
+++ b/src/components/deploymentConfig/deploymentConfig.scss
@@ -467,6 +467,10 @@
             &.gui {
                 height: calc(100% - 210px);
 
+                &.gui--no-infobar {
+                    height: calc(100% - 174px);
+                }
+
                 &.read-only-mode {
                     height: calc(100% - 158px);
                 }
