--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -2354,6 +2354,10 @@ button.anchor {
     max-width: 120px;
 }
 
+.dc__mxw-132 {
+    max-width: 132px;
+}
+
 .dc__mxw-160 {
     max-width: 160px;
 }
