bug: resource tree tabs - hides when scroll to page bottom fix

--- a/src/components/v2/appDetails/k8Resource/nodeDetail/nodeDetail.css
+++ b/src/components/v2/appDetails/k8Resource/nodeDetail/nodeDetail.css
@@ -56,3 +56,9 @@
     border-top-right-radius: 4px;
     margin: 0;
 }
+
+.node-detail__sticky {
+    position: sticky;
+    top: 120px;
+    z-index: 10;
+}
