--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -2976,6 +2976,10 @@ textarea,
     width: 10px;
 }
 
+.w-14 {
+    width: 14px;
+}
+
 .w-16 {
     width: 16px;
 }
@@ -3584,6 +3588,10 @@ textarea,
 
 .mxh-350 {
     max-height: 350px;
+}
+
+.mxh-400 {
+    max-height: 400px;
 }
 
 .mxh-504 {
@@ -4620,6 +4628,10 @@ textarea::placeholder {
             text-decoration: none;
             box-shadow: 0 8px 12px 0 rgba(30, 35, 96, 0.10), 0 1px 4px 0 rgba(0, 0, 0, 0.1);
         }
+    }
+
+    &--no-box-shadow {
+        box-shadow: none;
     }
 }
 
