--- a/src/components/v2/appDetails/k8Resource/nodeDetail/NodeDetailTabs/nodeDetailTab.scss
+++ b/src/components/v2/appDetails/k8Resource/nodeDetail/NodeDetailTabs/nodeDetailTab.scss
@@ -191,6 +191,13 @@
 
 .manifest-tabs-row {
     height: 32px;
+    background-color: inherit;
+    
+    &__position-sticky {
+        position: sticky;
+        top: 155px;
+        z-index: 10;
+    }
 }
 
 .edit-icon {
