feat: add util class for bg n0 with opacity and hover

--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -4115,6 +4115,14 @@ textarea::placeholder {
     background-color: var(--G500) !important;
 }
 
+.dc__bg-n0--opacity-0_5 {
+    background-color: rgba(255, 255, 255, 0.5);
+
+    &:hover {
+        background-color: var(--N0);
+    }
+}
+
 .dc__hover-n0:hover {
     background-color: var(--N0);
 }
